# Macho-Drive

./: .gitignore  .travis.yml  CMakeLists.txt  INSTALL.md  README.md  registros_db.txt  server_install.sh  server_run_docker.sh  server_test.py  unpack_rocksdb.sh
Cliente/: Instrucciones para obtener archivo apk.txt
Cliente/app/: build.gradle
Cliente/app/src/main/: AndroidManifest.xml
Cliente/gradle/wrapper/: gradle-wrapper.properties
doc/Administrador/: Makefile
doc/Administrador/source/: docker_uso.rst  equipo_inst.rst~  equipo_uso.rst~  index.rst~  instalacion.rst  instalacion.rst~  known_issues.rst  mantenimiento.rst  manual.rst~  uso.rst~
doc/Proyecto/source/: Manual_de_Proyecto.rst~  conclusion.rst~  division.rst  division.rst~  gestion.rst  gestion.rst~
doc/Tecnica/source/: ambiente.rst  ambiente.rst~  api.rst~  codigo.rst~  conf.py  diagramas.rst~  disenio.rst  docker.rst~  index.rst  index.rst~  introduccion.rst~  librerias.rst
doc/Tecnica/source/clientecodigo/: packages.rst  packages.rst~
doc/Usuario/source/: changelog.rst~  conf.py~  index.rst~  instalacion.rst  known_issues.rst  manual.rst~
doc/source/: Manual_de_Proyecto.rst  changelog.rst  conclusion.rst  docker.rst  index.rst  introduccion.rst
doc/source/Cliente/: manual.rst
doc/source/Cliente/Usos/: buscar_usuario.rst  subir_archivo.rst
doc/source/Server/: manual.rst
include/json/: jsoncpp.cpp
server/: CMakeLists.txt  build.sh  cov.sh  coverage_test.sh  crear_tests_vacios.sh  install_coveralls.sh  run_coverage.sh  run_tests.sh  server_test.py
server/doc_doxygen/html/: DBElementMock_8h_source.html  DBElement_8h_source.html  DatabaseRocksDB_8h_source.html  DatabaseWriteBatch_8h_source.html  Database_8h_source.html  EventHandlerGrantsAuthentication_8h_source.html  EventHandlerIgnoresAuthentication_8h_source.html  EventHandlerRemovesAuthentication_8h_source.html  FileAddHandler_8h_source.html  FileData_8h_source.html  FileDeleteHandler_8h_source.html  FileModifyHandler_8h_source.html  FileQuery_8h_source.html  FileSearchHandler_8h_source.html  FilesGetHandler_8h_source.html  HandlerManager_8h_source.html  HttpRequestConcrete_8h_source.html  HttpRequestMock_8h_source.html  HttpRequest_8h_source.html  LogInHandler_8h_source.html  LogOutHandler_8h_source.html  Logger_8h_source.html  RecyclebinGetHandler_8h_source.html  TokenAuthenticator_8h_source.html  UserDeleteHandler_8h_source.html  UserGetHandler_8h_source.html  UserGetProfileHandler_8h_source.html  UserMetadata_8h_source.html  UserModifyHandler_8h_source.html  User_8h_source.html  Util_8h_source.html  annotated.html  classDBElement-members.html  classDBElement.html  classDBElementMock-members.html  classDBElementMock.html  classDatabase-members.html  classDatabase.html  classDatabaseMockRAM.html  classDatabaseRocksDB-members.html  (+88 more)
server/doc_doxygen/html/search/: all_11.js  all_14.js  all_15.js  all_5.js  all_7.js  all_9.js  all_a.js  all_b.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_5.js  classes_7.js  classes_8.js  classes_9.js  functions_0.js  functions_1.js  functions_2.js  functions_5.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  functions_e.js  variables_0.js  variables_2.js  variables_3.js  variables_6.js  variables_7.js
server/include/json/: json.h
server/include/mongoose/: CMakeLists.txt
server/python integration tests/: server_test.py  server_test_func.py  test_server.py  test_set_up.py  test_shared_files.py
server/python integration tests/files/: devuelto_test.txt  test.txt  test1.txt  test2.txt  test_edu.txt  test_gabo.txt  teste.txt
server/src/: DBElement.cpp  DBElement.h  DBElementMock.cpp  DBElementMock.h  Database.cpp  Database.h  DatabaseMockRAM.cpp  DatabaseMockRAM.h  DatabaseRocksDB.cpp  DatabaseRocksDB.h  DatabaseWriteBatch.cpp  DatabaseWriteBatch.h  DefaultHandler.cpp  DefaultHandler.h  EventHandler.cpp  EventHandler.h  EventHandlerChecksAuthentication.cpp  EventHandlerChecksAuthentication.h  EventHandlerGrantsAuthentication.cpp  EventHandlerGrantsAuthentication.h  EventHandlerIgnoresAuthentication.cpp  EventHandlerIgnoresAuthentication.h  EventHandlerRemovesAuthentication.cpp  EventHandlerRemovesAuthentication.h  FileAddHandler.cpp  FileAddHandler.h  FileData.cpp  FileData.h  FileDeleteHandler.cpp  FileDeleteHandler.h  FileExtension.cpp  FileExtension.h  FileGetHandler.cpp  FileGetHandler.h  FileGetMetadataHandler.cpp  FileGetMetadataHandler.h  FileModifyHandler.cpp  FileModifyHandler.h  FileName.cpp  FileName.h  (+53 more)
server/tests/: DatabaseMockRAM_unittest.cpp  DatabaseRocksDB_unittest.cpp  Database_unittest.cpp  JsonSerializer_unittest.cpp  MD5_unittest.cpp  SignUpHandler_unittest.cpp  Util_test.cpp
server/unit tests/: DatabaseRocksDB_unittest.cpp  JsonSerializer_unittest.cpp
server/unit_tests/: CMakeLists.txt  DBElement_unittest.cpp  DatabaseMockRAM_unittest.cpp  DatabaseRocksDB_unittest.cpp  DatabaseWriteBatch_unittest.cpp  EventHandlerChecksAuthentication_unittest.cpp  EventHandlerGrantsAuthentication_unittest.cpp  EventHandlerIgnoresAuthentication_unittest.cpp  EventHandlerRemovesAuthentication_unittest.cpp  FileAddHandler_unittest.cpp  FileData_unittest.cpp  FileDeleteHandler_unittest.cpp  FileGetHandler_unittest.cpp  FileModifyHandler_unittest.cpp  FileQuery_unittest.cpp  FilesGetHandler_unittest.cpp  HttpRequestConcrete_unittest.cpp  JsonSerializer_unittest.cpp  LogInHandler_unittest.cpp  LogOutHandler_unittest.cpp  RecyclebinEmptyHandler_unittest.cpp  RecyclebinGetHandler_unittest.cpp  RecyclebinRecoverHandler_unittest.cpp  SignUpHandler_unittest.cpp  TokenAuthenticator_unittest.cpp  UserDeleteHandler_unittest.cpp  UserGetHandler_unittest.cpp  UserMetadata_unittest.cpp  User_unittest.cpp  Util_test.cpp  Util_unittest.cpp  main_tests.cpp
server/unit_tests/build_test/: CMakeLists.txt
src/: c_simple_example.cpp
src/client/: Client.cpp  Client.h  http_client.cpp
src/common/: mongoose.c
src/server/: EventHandler.h  HandlerManager.cpp  HandlerManager.h  LogInHandler.h  Server.cpp  Server.h  restful_api.cpp
(+88 files in other folders)
